kubernetes/apps/rook-ceph/rook-ceph/cluster/service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  type: ClusterIP
  selector:
    app: rook-ceph-mgr
    mgr_role: active
    rook_cluster: rook-ceph
  ports:
    - name: dashboard
      port: 7000
      targetPort: 7000
      protocol: TCP
